@@ -1,3 +1,8 @@
+2004-08-26  Michael Yount <csf@moscow.com>
+
+	* lib/Mj/Format.pm:  (lists)  Use separate head and foot
+	format files for the lists-full command.
+
 2004-08-22  Michael Yount <csf@moscow.com>
 
 	* bin/mj_wwwusr:  Ask for an e-mail address with optional
